# tools

server/: Cargo.toml  Dockerfile  docker-compose.yaml  postgres_public_account.json  postgres_public_user.json  refresh_tokens.txt  sqlx-data.json
server/config/: development.toml
server/migrations/: 20220223221902_init.sql
server/src/: app.rs  config.rs  graphql.rs  lib.rs  main.rs  mutations.rs  postgres.rs  queries.rs
server/src/loaders/: employee.rs
server/src/resolvers/: employee.rs  mod.rs  tool.rs
web/: .env  codegen.yml  package-lock.json  package.json  tailwind.config.js
web/components/: EmployeeList.query.graphql  EmployeeOption.tsx  Tool.tsx  ToolItem.tsx  ToolList.tsx
web/components/Archive/: AddAssemblyToEstimateForm.tsx  AssemblyItemDetails.tsx
web/components/EmployeeOption/: AssignTool.mutation.graphql  EmployeeOption.tsx  EmployeeParts.fragment.graphql
web/components/Tool/: Tool.tsx  ToolParts.fragment.graphql
web/components/ToolList/: ToolList.query.graphql  ToolList.tsx
web/components/ToolListItem/: ToolItem.tsx
web/lib/: getClientConfig.ts  urqlClient.ts
web/pages/: _document.tsx  index.tsx  index.tsx.txt
